src/test/deca/avecObjet/valid/protected_field_access_subclass_this copy.deca
// Description :
//    Accès à un champ protected via this dans une sous-classe.
//
// Resultats :
//    OK

class A {
    protected int x;
}

class B extends A {
    void set() {
        this.x = 3;
    }
}

{
}

