src/test/deca/avecObjet/invalid/protected_field_access_wrong_object_type.deca
// Description :
//    Accès à un champ protected via un objet dont le type n'est pas un sous-type.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : Accès protégé invalide : le type de l'objet (A) n'est pas un sous-type de la classe courante (B)

class A {
protected int x;
}

class B extends A {
    int f(A a) {
        return a.x;
    }
}

{
}

